<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:key="@string/skip_startup_account_select_key"
        android:title="@string/skip_startup_account_select_pref" />

    <Preference
        android:icon="@drawable/mal_logo"
        app:isPreferenceVisible="false"
        android:key="@string/mal_key" />

    <Preference
        android:icon="@drawable/ic_anilist_icon"
        app:isPreferenceVisible="false"
        android:key="@string/anilist_key" />

    <Preference
        android:icon="@drawable/simkl_logo"
        app:isPreferenceVisible="false"
        android:key="@string/simkl_key" />

    <Preference
        android:icon="@drawable/open_subtitles_icon"
        android:key="@string/opensubtitles_key" />


    <SwitchPreferenceCompat
        android:key="@string/biometric_enabled_key"
        android:defaultValue="false"
        android:icon="@drawable/ic_fingerprint"
        android:title="@string/biometric_setting" />
</PreferenceScreen>