<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lightPrimaryGrayBackground"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEdEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grayTextColor"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="#BF000000"
        app:boxStrokeWidth="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvResetPasswordText"
        app:layout_constraintStart_toStartOf="@+id/tvResetPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPasswordText">

        <EditText
            android:id="@+id/edrestEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="First Name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#BF000000"
            android:textColorHighlight="#BF000000"
            android:textSize="@dimen/logintextdim" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEdEmail"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEdEmail"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEdEmail">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            style="@style/BlackButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/sort_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_btn"
            style="@style/WhiteButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/send" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>